<resources>
    <string name="app_name">Pom-pom</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="timer_dummy_text">00:00</string>
    <string name="resetButton">Reset</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="title_activity_scrolling">History</string>
</resources>